Native/Test/KL/error.out
error.kl:4:3: error: syntax error, unexpected integer constant, expecting ;
