Native/Test/KL/error.kl
operator entry()
{
  9
  7 + foo;
}
